# cyclelist

./: .gitignore  README.md  setup.cfg  setup.py
loopedlist/: __init__.py
loopedlist.egg-info/: PKG-INFO  SOURCES.txt
looplist/: __init__.py
