[metadata]
name = loopedlist-Kartuz
version = 0.0.1
author = Kartuz
author_email = musailov2004@mail.ru
description = Adds looped containers to Python 3.x
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Dead-Ded/loopedlist
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
[options]
package_dir =
    = loopedlist
packages = find:
python_requires = >=3.6

[options.packages.find]
where = loopedlist